fix(map): prevent abyssal systems from appearing when not linked to a jump

--- a/ui/src/main/css/app.css
+++ b/ui/src/main/css/app.css
@@ -259,7 +259,7 @@ $box-height:    40px;
     color: $red;
 }
 
-.system-class-pochven, .system-class-void, .system-class-abyssal20, .system-class-abyssal21, .system-class-abyssal22, .system-class-abyssal22 {
+.system-class-pochven, .system-class-void, .system-class-abyssal20, .system-class-abyssal21, .system-class-abyssal22, .system-class-abyssal23 {
     color: $red-dark;
 }
 
